--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
+    "dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "build:analyze": "webpack --config webpack.prod.js --env analyze=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "sideEffects": false,
@@ -21,6 +23,10 @@
     "webpack-dev-server": "^5.2.0"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.5.13"
+    "@vue/compiler-sfc": "^3.5.13",
+    "mini-css-extract-plugin": "^2.9.2",
+    "terser-webpack-plugin": "^5.3.11",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-merge": "^6.0.1"
   }
 }
