--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
     "build:analyze": "webpack --config webpack.prod.js --env analyze=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,18 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
     "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
+    "vue-router": "^4.5.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.5.13",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "mini-css-extract-plugin": "^2.9.2",
     "terser-webpack-plugin": "^5.3.11",
+    "vue-style-loader": "^4.1.3",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-merge": "^6.0.1"
   }
